bin_PROGRAMS = stamp

stamp_SOURCES = cap.cpp \
           isrc.cpp \
           main.cpp \
           mut.cpp \
           res.cpp \
           stamp.cpp \
           util.cpp \
           vsrc.cpp \
           ind.cpp

noinst_HEADERS = cap.h \
           device.h \
           ind.h \
           isrc.h \
           mat.h \
           mut.h \
           res.h \
           stamp.h \
           util.h \
           vsrc.h

